--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -21,7 +21,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a ng-href="/users/{{currentUser.id}}">{{currentUser.username}}'s Profile</a></li>
+        <li><a href="/">Back to photofeed</a></li>
         <li><a ng-click="logout()">Log out</a></li>
       </ul>
     </div>
