fix bug #8: got messy with routes

--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -34,7 +34,7 @@
     <div class="leftPanel">
       <!-- username and photo -->
       <div class="text-center">
-        <div class="profileUsername">{{currentUser.username}}</div>
+        <div class="profileUsername">{{user.username}}</div>
         <img ng-src="{{editProfile.profile}}" class="circle">
       </div>
       <div>
