--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -21,7 +21,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">Back to photofeed</a></li>
+        <li><a href="/photos">Photofeed</a></li>
         <li><a ng-click="logout()">Log out</a></li>
       </ul>
     </div>
@@ -100,12 +100,12 @@
     <!-- see my photos -->
     <div class="panel panel-primary" ng-repeat="photo in photos" ng-show="view.allPhotos">
       <div class="panel-heading">
-        <span class="photoTitle">{{photo.title}}</span>
+        <span><a ng-href="/photos/{{photo._id}}" class="photoTitle">{{photo.title}}</a></span>
       </div>
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-7">
-            <img ng-src="{{photo.photoUrl}}" class="photo">
+            <a ng-href="/photos/{{photo._id}}"><img ng-src="{{photo.photoUrl}}" class="photo"></a>
           </div>
           <div class="col-sm-5">
             <div class="photoUsername"><em>@{{photo.username}}</em></div>
@@ -143,15 +143,17 @@
     <!-- see my favorites -->
     <div class="panel panel-primary" ng-repeat="photo in favoritePhotos" ng-show="view.favPhotos">
       <div class="panel-heading">
-        <span class="photoTitle">{{photo.title}}</span>
+        <span><a ng-href="/photos/{{photo._id}}" class="photoImg">{{photo.title}}</a></span>
       </div>
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-7">
-            <img ng-src="{{photo.photoUrl}}" class="photo">
+            <a ng-href="/photos/{{photo._id}}"><img ng-src="{{photo.photoUrl}}" class="photo"></a>
           </div>
           <div class="col-sm-5">
-            <div class="photoUsername"><em>@{{photo.username}}</em></div>
+            <div class="photoUsername" ng-show="photo.username === currentUser.username"><em>@{{photo.username}}</em></div>
+            <div class="photoUsername" ng-show="photo.username !== currentUser.username"><em><a ng-href="/users/{{photo.user}}" class="photoLink">@{{photo.username}}</a></em></div>
+
             <div class="photoDate">{{photo.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
             <div class="hr"></div>
 
