fix bug #9: add duplicate array for populating for profile page

--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -64,7 +64,7 @@
       <!-- favorited -->
       <table class="table" ng-click="toggleFavPhotos()">
         <thead>
-          <th class="tableValue">{{user.favoritePhotos.length}} favorited</th>
+          <th class="tableValue">{{user.favoritePhotosPop.length}} favorited</th>
         </thead>
       </table>
       
