--- a/client/css/main.css
+++ b/client/css/main.css
@@ -50,13 +50,13 @@
   color: white;
   text-decoration: none;
 }
-.photoLink {
+.photoLink, .photoUsername:hover {
   text-decoration: none;
 }
 .photoTitleLink {
   color: white;
 }
-.photoTitleLink:hover {
+.photoTitleLink:hover, {
   text-decoration: none;
   color: white;
 }
@@ -103,17 +103,19 @@ body {
 }
 .leftPanel {
   background-color: dodgerblue;
+  margin-top: -21px;
 }
 .profileUsername {
-  font-size: 215%;
+  font-size: 225%;
   color: black;
+  margin-top: 12px;
 }
 .circle {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  margin-top: 10px;
-  margin-bottom: 15px;
+  margin-top: 22px;
+  margin-bottom: 25px;
 }
 .tableValue {
   text-align: center;
