--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -72,13 +72,15 @@
       <table class="table button">
         <thead>
           <th ng-show="view.showProfile"><button class="btn btn-default btn-block" ng-click="toggleEditForm()">Update Profile</button></th>
-          <th ng-show="view.showFollow"><button class="btn btn-default btn-block">Follow</button></th>
+          <th ng-show="view.showFollow"><button class="btn btn-default btn-block" ng-click="followReq(currentUser.username, user.username)">Follow</button></th>
         </thead>
       </table>
     </div>
   </div>
 
   <div class="col-sm-8">
+    {{test}}
+    {{test2}}
     <!-- update personal information form -->
     <form class="form-horizontal" ng-show="view.showEditForm" ng-submit="edit(editProfile)">
       <fieldset>
