--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -78,6 +78,7 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
+    {{user}}
     <!-- panel for photofeed -->
     <div class="panel panel-primary" ng-repeat="photo in photos track by $index">
       <div class="panel-heading">
@@ -91,7 +92,7 @@
             </a>
           </div>
           <div class="col-sm-5">
-            <div><a ng-href="/users/{{photo.user}}" class="photoUsername"><em>@{{photo.username}}</em></a></div>
+            <div><a ng-href="/users/{{photo.username}}" class="photoUsername"><em>@{{photo.username}}</em></a></div>
             <div class="photoDate">{{photo.updated_at | date:'EEEE, MMMM d, y, h:mm a'}}</div>
             <div class="hr"></div>
             <!-- stats pills -->
