--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -12,8 +12,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        <li><a ng-click="toggleForm()" ng-hide="view.showPhotoForm">Add Photo</a></li>
-        <li><a ng-click="toggleForm()" ng-show="view.showPhotoForm">Nevermind!</a></li>
+        <li><a ng-click="toggleForm()">Add Photo</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -67,6 +66,7 @@
         <div class="form-group">
           <div class="col-md-10 col-md-offset-2">
             <button type="submit" class="btn btn-primary">Post</button>
+            <button type="reset" class="btn btn-default" ng-click="toggleForm()">Cancel</button>
           </div>
         </div>
       </fieldset>
@@ -78,7 +78,6 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
-    {{user}}
     <!-- panel for photofeed -->
     <div class="panel panel-primary" ng-repeat="photo in photos track by $index">
       <div class="panel-heading">
