run into bug with accepting follow request; have to save to db twice

--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -146,11 +146,7 @@
     <!-- see my following -->
 
     <!-- see my pending following -->
-    {{test}}
-    <br>
-    <br>
-    <br>
-    {{test2}}
+    {{user}}
     <div class="col-sm-4">
       <div class="panel panel-primary" ng-show="view.pendingFollowInfo" ng-repeat="p in pending track by $index">
         <div class="panel-heading">
