--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -49,7 +49,7 @@
       </table>
 
       <!-- followers -->
-      <table class="table">
+      <table class="table" ng-click="toggleFollowers()">
         <thead>
           <th class="tableValue">{{user.followers.length}} followers</th>
           <th class="tableValue" ng-show="view.showPendingRequest" ng-click="togglePendingFollowInfo()">{{user.pendingFollowRequest.length}} pending</th>
@@ -91,9 +91,9 @@
   </div>
 
   <div class="col-sm-8">
-<!--   {{test}}
+  {{test}}
   <br><br>
-  {{test2}} -->
+  {{test2}}
     <!-- update personal information form -->
     <form class="form-horizontal" ng-show="view.showEditForm" ng-submit="edit(editProfile)">
       <fieldset>
@@ -154,6 +154,16 @@
     </div>
 
     <!-- see my followers -->
+    <div class="col-sm-4" ng-repeat="f in followers">
+      <div class="panel panel-primary" ng-show="view.followers">
+        <div class="panel-heading">
+          <h3 class="panel-title"><a ng-href="/users/{{f.username}}" class="photoTitle">{{f.username}}</a></h3>
+        </div>
+        <div class="panel-body">
+          <a ng-href="/users/{{f.username}}"><img ng-src="{{f.profile}}" class="circle"></a>
+        </div>
+      </div>
+    </div>
 
     <!-- see my following -->
 
