--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -57,7 +57,7 @@
       </table>
 
       <!-- following -->
-      <table class="table">
+      <table class="table" ng-click="toggleFollowing()">
         <thead>
           <th class="tableValue">{{user.following.length}} following</th>
         </thead>
@@ -166,6 +166,17 @@
     </div>
 
     <!-- see my following -->
+    <div class="col-sm-4" ng-repeat="f in following">
+      <div class="panel panel-primary" ng-show="view.following">
+        <div class="panel-heading">
+          <h3 class="panel-title"><a ng-href="/users/{{f.username}}" class="photoTitle">{{f.username}}</a></h3>
+        </div>
+        <div class="panel-body">
+          <a ng-href="/users/{{f.username}}"><img ng-src="{{f.profile}}" class="circle"></a>
+        </div>
+      </div>
+    </div>
+
 
     <!-- see my pending following -->
     <div class="col-sm-4">
