add functionality to view all things properly in profile

--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -51,7 +51,7 @@
       <!-- followers -->
       <table class="table">
         <thead>
-          <th class="tableValue">{{user.followers.length}} followers</th>
+          <th class="tableValue" ng-click="toggleFollower()">{{user.followers.length}} followers</th>
           <th class="tableValue" ng-show="view.showPendingRequest" ng-click="togglePendingFollowInfo()">{{user.pendingFollowRequest.length}} pending</th>
         </thead>
       </table>
