fix bug in like/dislike methods

--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -29,6 +29,8 @@
   </div>
 </nav>
 
+{{user}}
+
 <div class="container-fluid">
   <div id="photoForm">
     <form class="form-horizontal" ng-show="view.showPhotoForm" ng-submit="post(newPhoto)">
