add some last minute changes before presentation

--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -95,7 +95,7 @@
           <option value="title">A-Z</option>
           <option value="-title">Z-A</option>
           <option value="-numLikes">Most Likes</option>
-          <option value="-numFavs">Most Favorites</option>
+          <option value="-numFavorites">Most Favorites</option>
           <option value="-numComments">Most Comments</option>
         </select>
         <br>
