--- a/client/js/templates/home.html
+++ b/client/js/templates/home.html
@@ -33,9 +33,9 @@
       <div id="sellingPoints">
         <div id="homeWhatTitle">WHAT IS SCENICPHOTO?</div>
         <div id="homeWhat">
-          scenicPhoto is a social network where users can show off their photos,
-          discover new spots to hike and shoot, and research different hiking spots
-          and photography equipment!
+          scenicPhoto is a social network for users who love hiking and photography.
+          Users can show off their photos, connect with other users, and discover new 
+          spots to hike and shoot!
         </div>
       </div>
 
