add img-responsive class

--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -13,13 +13,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         <li><a ng-click="toggleForm()">Add Photo</a></li>
-        <li class="dropdown">
+        <!-- <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a ng-href="#">Hiker's Resource</a></li>
             <li><a ng-href="#">Photographer's Resource</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a ng-href="/users/{{currentUser.username}}">{{currentUser.username}}'s Profile</a></li>
