--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -14,14 +14,14 @@
       <ul class="nav navbar-nav navbar-left">
         <li ng-hide="view.showCommentPanel" ng-click="toggleComment()"><a>See Comments</a></li>
         <li ng-click="toggleForm()" ng-show="view.showCommentPanel && showButtons()"><a>Edit Photo</a></li>
-        <li data-toggle="modal" data-target="#deleteModal" ng-show="showButtons()"><a>Delete Photo</a></li>
+        <!-- <li data-toggle="modal" data-target="#deleteModal" ng-show="showButtons()"><a>Delete Photo</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a ng-href="#">Hiker's Resource</a></li>
             <li><a ng-href="#">Photographer's Resource</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a ng-href="/users/{{currentUser.username}}">{{currentUser.username}}'s Profile</a></li>
