--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" ng-href="/home">scenicPhoto</a>
+      <a class="navbar-brand" ng-href="/home"><span class="glyphicon glyphicon-camera"></span> scenicPhoto</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
