--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -88,15 +88,15 @@
         </div>
       </div>
       <div class="col-sm-5">
-        <label class="form-label">Sort by: </label>
+        <label class="form-label">Sort photofeed... </label>
         <select class="form-control" ng-model="view.order">
           <option value="-updated_at">Newest to Oldest</option>
           <option value="updated_at">Oldest to Newest</option>
           <option value="title">A-Z</option>
           <option value="-title">Z-A</option>
-          <option value="-numLikes">Most Likes</option>
-          <option value="-numFavorites">Most Favorites</option>
-          <option value="-numComments">Most Comments</option>
+          <option value="-numLikes">By Most Likes</option>
+          <option value="-numFavorites">By Most Favorites</option>
+          <option value="-numComments">By Most Comments</option>
         </select>
         <br>
       </div>
