--- a/client/js/templates/photo.html
+++ b/client/js/templates/photo.html
@@ -179,12 +179,13 @@
             <input type="text" ng-model="comment.id">
           </div>
           <div class="row">
-            <div class="col-sm-9">
+            <div class="col-sm-7">
               <input type="text" class="form-control" ng-model="comment.comment">
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
               <button class="btn btn-primary">Post</button>
             </div>
+            <div class="col-sm-3"></div>
           </div>
         </form>
 
