fix ui for pending requests

--- a/client/js/templates/profile.html
+++ b/client/js/templates/profile.html
@@ -52,7 +52,7 @@
       <table class="table">
         <thead>
           <th class="tableValue" ng-click="toggleFollower()">{{user.followers.length}} followers</th>
-          <th class="tableValue" ng-show="view.showPendingRequest" ng-click="togglePendingFollowInfo()">{{user.pendingFollowRequest.length}} pending</th>
+          <th class="tableValue" ng-show="view.showPendingRequest && pending.length !== 0" ng-click="togglePendingFollowInfo()">{{user.pendingFollowRequest.length}} pending</th>
         </thead>
       </table>
 
