update home page for about

--- a/client/js/templates/home.html
+++ b/client/js/templates/home.html
@@ -33,9 +33,7 @@
       <div id="sellingPoints">
         <div id="homeWhatTitle">WHAT IS SCENICPHOTO?</div>
         <div id="homeWhat">
-          scenicPhoto is a social network for users who love hiking and photography.
-          Users can show off their photos, connect with other users, and discover new 
-          spots to hike and shoot!
+          scenicPhoto is a social network for users who love nature and photography. Users can show off their photos, connect with other users, and discover new spots to visit and shoot!
         </div>
       </div>
 
