change wording on photo feed

--- a/client/js/templates/photos.html
+++ b/client/js/templates/photos.html
@@ -83,7 +83,7 @@
       <!-- search bar -->
       <div class="col-sm-5">     
         <div class="form-group">
-          <label class="form-label">Search photofeed by username, title, or description...</label>
+          <label class="form-label">Search photofeed by username or keyword</label>
           <input type="text" class="form-control" ng-model="view.query">
         </div>
       </div>
